# translate_replace

./: Cargo.toml  README.md
src/: main.rs
