[package]
name = "translate-replace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
glob = "0.3.0"
regex = "1.6.0"
serde = "1.0.145"
serde_json = "1.0.85"
